FIX color contrast for accessibility reasons

--- a/sass/components/filter-options.scss
+++ b/sass/components/filter-options.scss
@@ -20,4 +20,8 @@
       min-width: 200px;
     }
   }
+
+  label {
+    font-size: 0;
+  }
 }
