--- a/sass/variables/colors.scss
+++ b/sass/variables/colors.scss
@@ -1,8 +1,8 @@
 // colors
 
-$orange: #f18200;
+$orange: #b30000;
 $darkGrey: #333;
 $grey: #666;
 $lightGrey: #ccc;
-$lightBlue: #3397db;
+$lightBlue: #155B8E;
 $blue: #01447e;
